# washingLineMonitor-S003-webserver

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  schema.sql
.prompts/: high-level-design-document.md  predictor-design-document.prompt.md
src/: main.rs  prediction_algorithms.rs  trigger_algorithms.rs  washing_predictor.rs
